src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_10_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "flatcase": Integer {
                    value: 3,
                },
            },
            enclosing: None,
        },
    },
}
