src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_10_evaluation.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluation
---
Integer {
    value: 3,
}
