src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_10_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "flatcase",
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 3,
        },
        position: Position {
            line: 1,
            column: 21,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 22,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "flatcase",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
