src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_10_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "flatcase",
            expression: Integer {
                literal: 3,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "flatcase",
        },
    },
]
