src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_11_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 3,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "camelCase",
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "camelCase",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
