src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_11_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "camelCase",
            expression: Boolean {
                literal: false,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "camelCase",
        },
    },
]
