src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_12_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "PascalCase": String {
                    value: "terrible format",
                },
            },
            enclosing: None,
        },
    },
}
