src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_12_evaluator.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluation
---
String {
    value: "terrible format",
}
