src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_12_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "PascalCase",
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: String {
            literal: "terrible format",
        },
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 37,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "PascalCase",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
