src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_12_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "PascalCase",
            expression: String {
                literal: "terrible format",
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "PascalCase",
        },
    },
]
